[gd_scene load_steps=5 format=3 uid="uid://cecse2dibg87g"]

[ext_resource type="Script" path="res://Scripts/UI/Ending.gd" id="1_hxryl"]
[ext_resource type="FontFile" uid="uid://bmwimpog4uwfm" path="res://Assets/Fonts/HopeGold.ttf" id="2_0k5a2"]
[ext_resource type="Texture2D" uid="uid://bq23qt60of6xn" path="res://Assets/Sprites/ending_improved.png" id="3_01snh"]
[ext_resource type="AudioStream" uid="uid://bw6hjkydhs6gn" path="res://Assets/Sons/Moi c JMLP.ogg" id="3_236ow"]

[node name="Ending" type="CanvasLayer"]
script = ExtResource("1_hxryl")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(800, 430)
scale = Vector2(16, 16)
texture = ExtResource("3_01snh")

[node name="GameOver" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -858.0
offset_top = -351.0
offset_right = 858.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.93875)
theme_override_fonts/font = ExtResource("2_0k5a2")
theme_override_font_sizes/font_size = 128
text = "Vous n'avez pas survécu
à la rouille ..."
horizontal_alignment = 1

[node name="Restart" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -762.0
offset_top = 339.0
offset_right = -128.0
offset_bottom = 435.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_0k5a2")
theme_override_font_sizes/font_size = 96
text = "KEY_RESTART"

[node name="Quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 117.0
offset_top = 344.0
offset_right = 751.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_0k5a2")
theme_override_font_sizes/font_size = 92
text = "KEY_QUIT"

[node name="Score" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -67.5
offset_right = 121.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0k5a2")
theme_override_font_sizes/font_size = 96
text = "Score: 0"
horizontal_alignment = 1

[node name="EndAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_236ow")
autoplay = true

[connection signal="button_down" from="Restart" to="." method="_on_restart_button_down"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_button_down"]
